[package]
name = "udt4"
version = "0.1.0"
edition = "2021"
description = "rust-native implementation of the udt4 protocol"
readme = "README.md"
repository = "https://github.com/kilmanio/udt4-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
